<resources>
    <string name="appName">App Transporte</string>
    <string name="descripcionLogo">Icono de la App</string>
    <string name="botonLogIn" translatable="false">sign in</string>
    <string name="botonRegister" translatable="false">sign up</string>
    <string name="labelUsername">Usuario:</string>
    <string name="labelPassword">Contraseña:</string>
    <string name="labelEmpresa">Empresa:</string>
    <string name="strUsername" translatable="false">admin</string>
    <string name="strPassword" translatable="false">12345</string>
    <string name="loginFailed">El usuario o contraseña son incorrectos</string>
    <string name="loginCorrect">Ingresando…</string>
    <string name="notImplemented" translatable="false">Not yet implemented</string>
    <string name="test" translatable="false">test</string>
    <string name="loginFail" translatable="false">Login failed</string>
    <string name="loginOk" translatable="false">loginOk</string>
    <string name="accept">Aceptar</string>
    <string name="homeScreenTitle" translatable="false">Home screen</string>
    <string name="botonSignOut" translatable="false">Sign out</string>
    <string name="weatherButton" translatable="false">Weather</string>
    <string name="errorMessage">⚠️ Error</string>
    <string name="loadingEmoji">⌛</string>
    <string name="cityValue">city</string>
    <string name="inputCityMessage">Input City</string>
    <string name="checkMessage">Check</string>
    <string name="notes">Notes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="add_note">Add note</string>
    <string name="titleNotes">Notes</string>
</resources>